// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transactions matches snapshot with no transactions 1`] = `
<div>
  <TransactionDialog
    account={
      Object {
        "id": 1,
        "nstitution": "TD",
      }
    }
    onCancel={[Function]}
    open={false}
    transaction={null}
  />
  <div
    className="MuiPaper-root-1 MuiPaper-elevation0-3 MuiPaper-rounded-2"
  >
    <TransactionsToolbar
      account={
        Object {
          "id": 1,
          "nstitution": "TD",
        }
      }
      handleDelete={[Function]}
      handleNew={[Function]}
      selectedTransactions={Array []}
    />
    <div>
      <div
        style={
          Object {
            "height": 0,
            "overflow": "visible",
            "width": 0,
          }
        }
      >
        <div
          aria-colcount={6}
          aria-rowcount={0}
          className="ReactVirtualized__Table"
          role="grid"
          style={Object {}}
        >
          <div
            className="ReactVirtualized__Table__headerRow undefined"
            role="row"
            style={
              Object {
                "height": 25,
                "overflow": "hidden",
                "paddingRight": 0,
                "width": 0,
              }
            }
          >
            <div
              className="ReactVirtualized__Table__headerColumn"
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "0 1 40px",
                  "flex": "0 1 40px",
                  "msFlex": "0 1 40px",
                }
              }
            >
              <span
                className="ReactVirtualized__Table__headerTruncatedText"
              >
                <span
                  className="MuiButtonBase-root-44 MuiIconButton-root-38 MuiPrivateSwitchBase-root-34 MuiCheckbox-root-28 MuiCheckbox-colorSecondary-33"
                  onBlur={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={null}
                >
                  <span
                    className="MuiIconButton-label-43"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-47"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                    <input
                      checked={false}
                      className="MuiPrivateSwitchBase-input-37"
                      data-indeterminate={false}
                      onChange={[Function]}
                      type="checkbox"
                    />
                  </span>
                  <span
                    className="MuiTouchRipple-root-56"
                  />
                </span>
              </span>
            </div>
            <div
              aria-label="Date"
              aria-sort="none"
              className="ReactVirtualized__Table__headerColumn ReactVirtualized__Table__sortableHeaderColumn"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "0 1 120px",
                  "flex": "0 1 120px",
                  "msFlex": "0 1 120px",
                }
              }
              tabIndex={0}
            >
              <span
                className="ReactVirtualized__Table__headerTruncatedText"
                title="Date"
              >
                Date
              </span>
            </div>
            <div
              className="ReactVirtualized__Table__headerColumn"
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "1 1 200px",
                  "flex": "1 1 200px",
                  "msFlex": "1 1 200px",
                }
              }
            >
              <span
                className="ReactVirtualized__Table__headerTruncatedText"
                title="Description"
              >
                Description
              </span>
            </div>
            <div
              aria-label="In"
              aria-sort="none"
              className="ReactVirtualized__Table__headerColumn ReactVirtualized__Table__sortableHeaderColumn"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "0 1 100px",
                  "flex": "0 1 100px",
                  "msFlex": "0 1 100px",
                }
              }
              tabIndex={0}
            >
              <span
                className="ReactVirtualized__Table__headerTruncatedText"
                title="In"
              >
                In
              </span>
            </div>
            <div
              aria-label="Out"
              aria-sort="none"
              className="ReactVirtualized__Table__headerColumn ReactVirtualized__Table__sortableHeaderColumn"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "0 1 100px",
                  "flex": "0 1 100px",
                  "msFlex": "0 1 100px",
                }
              }
              tabIndex={0}
            >
              <span
                className="ReactVirtualized__Table__headerTruncatedText"
                title="Out"
              >
                Out
              </span>
            </div>
            <div
              className="ReactVirtualized__Table__headerColumn"
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "0 1 40px",
                  "flex": "0 1 40px",
                  "msFlex": "0 1 40px",
                }
              }
            >
              <span
                className="ReactVirtualized__Table__headerTruncatedText"
              />
            </div>
          </div>
          <div
            aria-label="grid"
            aria-readonly={true}
            className="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
            onScroll={[Function]}
            role="rowgroup"
            style={
              Object {
                "WebkitOverflowScrolling": "touch",
                "boxSizing": "border-box",
                "direction": "ltr",
                "height": -25,
                "overflowX": "hidden",
                "overflowY": "auto",
                "position": "relative",
                "width": 0,
                "willChange": "transform",
              }
            }
            tabIndex={0}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Transactions matches snapshot with one transaction 1`] = `
<div>
  <TransactionDialog
    account={
      Object {
        "description": "TD EasyWeb",
        "id": 1,
        "institution": "TD",
      }
    }
    onCancel={[Function]}
    open={false}
    transaction={null}
  />
  <div
    className="MuiPaper-root-1 MuiPaper-elevation0-3 MuiPaper-rounded-2"
  >
    <TransactionsToolbar
      account={
        Object {
          "description": "TD EasyWeb",
          "id": 1,
          "institution": "TD",
        }
      }
      handleDelete={[Function]}
      handleNew={[Function]}
      selectedTransactions={Array []}
    />
    <div>
      <div
        style={
          Object {
            "height": 0,
            "overflow": "visible",
            "width": 0,
          }
        }
      >
        <div
          aria-colcount={6}
          aria-rowcount={1}
          className="ReactVirtualized__Table"
          role="grid"
          style={Object {}}
        >
          <div
            className="ReactVirtualized__Table__headerRow undefined"
            role="row"
            style={
              Object {
                "height": 25,
                "overflow": "hidden",
                "paddingRight": 0,
                "width": 0,
              }
            }
          >
            <div
              className="ReactVirtualized__Table__headerColumn"
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "0 1 40px",
                  "flex": "0 1 40px",
                  "msFlex": "0 1 40px",
                }
              }
            >
              <span
                className="ReactVirtualized__Table__headerTruncatedText"
              >
                <span
                  className="MuiButtonBase-root-44 MuiIconButton-root-38 MuiPrivateSwitchBase-root-34 MuiCheckbox-root-28 MuiCheckbox-colorSecondary-33"
                  onBlur={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={null}
                >
                  <span
                    className="MuiIconButton-label-43"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-47"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                    <input
                      checked={false}
                      className="MuiPrivateSwitchBase-input-37"
                      data-indeterminate={false}
                      onChange={[Function]}
                      type="checkbox"
                    />
                  </span>
                  <span
                    className="MuiTouchRipple-root-56"
                  />
                </span>
              </span>
            </div>
            <div
              aria-label="Date"
              aria-sort="none"
              className="ReactVirtualized__Table__headerColumn ReactVirtualized__Table__sortableHeaderColumn"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "0 1 120px",
                  "flex": "0 1 120px",
                  "msFlex": "0 1 120px",
                }
              }
              tabIndex={0}
            >
              <span
                className="ReactVirtualized__Table__headerTruncatedText"
                title="Date"
              >
                Date
              </span>
            </div>
            <div
              className="ReactVirtualized__Table__headerColumn"
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "1 1 200px",
                  "flex": "1 1 200px",
                  "msFlex": "1 1 200px",
                }
              }
            >
              <span
                className="ReactVirtualized__Table__headerTruncatedText"
                title="Description"
              >
                Description
              </span>
            </div>
            <div
              aria-label="In"
              aria-sort="none"
              className="ReactVirtualized__Table__headerColumn ReactVirtualized__Table__sortableHeaderColumn"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "0 1 100px",
                  "flex": "0 1 100px",
                  "msFlex": "0 1 100px",
                }
              }
              tabIndex={0}
            >
              <span
                className="ReactVirtualized__Table__headerTruncatedText"
                title="In"
              >
                In
              </span>
            </div>
            <div
              aria-label="Out"
              aria-sort="none"
              className="ReactVirtualized__Table__headerColumn ReactVirtualized__Table__sortableHeaderColumn"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "0 1 100px",
                  "flex": "0 1 100px",
                  "msFlex": "0 1 100px",
                }
              }
              tabIndex={0}
            >
              <span
                className="ReactVirtualized__Table__headerTruncatedText"
                title="Out"
              >
                Out
              </span>
            </div>
            <div
              className="ReactVirtualized__Table__headerColumn"
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "0 1 40px",
                  "flex": "0 1 40px",
                  "msFlex": "0 1 40px",
                }
              }
            >
              <span
                className="ReactVirtualized__Table__headerTruncatedText"
              />
            </div>
          </div>
          <div
            aria-label="grid"
            aria-readonly={true}
            className="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
            onScroll={[Function]}
            role="rowgroup"
            style={
              Object {
                "WebkitOverflowScrolling": "touch",
                "boxSizing": "border-box",
                "direction": "ltr",
                "height": -25,
                "overflowX": "hidden",
                "overflowY": "auto",
                "position": "relative",
                "width": 0,
                "willChange": "transform",
              }
            }
            tabIndex={0}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
